// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 603.2313,
  },
  "p2": {
    "hp": 35.488,
    "state": "VICTORY",
    "x": 759.2947,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 2742,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:1b25da2f",
  "t300:7d243d25",
  "t450:8099c5c1",
  "t600:a64df3c1",
  "t750:f99404cd",
  "t900:1d63010b",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 45.4312,
    "state": "IDLE",
    "x": 591.3817,
  },
  "p2": {
    "hp": 100,
    "state": "BLOCK",
    "x": 865.1875,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:cc87637",
  "t240:6ddd7beb",
  "t360:ba6feb06",
  "t480:f9c39c27",
  "t600:902d32c1",
  "t720:ca20e95e",
  "t840:5b2bbba",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:c9eab36d",
  "t240:867a4e4b",
  "t360:c277cd0b",
  "t480:a6ade801",
  "t600:ba8d45b4",
  "t720:9b66ada5",
  "t840:55ea6f0f",
  "t960:a43cd7fb",
  "t1080:e9c81683",
  "t1200:fe76b83c",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 17.0974,
    "state": "HEAVY_ATTACK",
    "x": 364.724,
  },
  "p2": {
    "hp": 44.704,
    "state": "HEAVY_ATTACK",
    "x": 614.6367,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;
